# BlogAutoPilot

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  ai_writer.py  categories.json  config.py  demo_workflow.py  extract_text.py  file_bot.py  main.py  publish_wp.py  push_telegram.py  pyproject.toml  requirements.txt  tag_synonyms.json  test_api_connections.py  test_directory_parsing.py  test_integration.py
blog_autopilot/: __init__.py  __main__.py  ai_writer.py  cliche_library.py  config.py  constants.py  cover_image.py  db.py  embedding.py  exceptions.py  extractor.py  ingest.py  models.py  pipeline.py  publisher.py  recommender.py  review_analytics.py  scanner.py  series.py  survey.py  tag_governance.py  tag_normalizer.py  tag_registry.py  telegram.py
blog_autopilot/ai/: __init__.py  client.py  html_utils.py  json_parser.py  relation_context.py  review.py  sanitize.py  seo.py  tagger.py
blog_autopilot/prompts/: promo_system.txt  promo_user.txt  recommend_system.txt  recommend_user.txt  review_system.txt  review_user.txt  seo_system.txt  (+24 more)
tests/: conftest.py  test_ai_writer.py  test_backfill.py  test_cliche_library.py  test_config.py  test_cover_image.py  test_db.py  test_dedup.py  test_embedding.py  test_extractor.py  test_html_sanitize.py  test_ingest.py  test_models.py  test_pipeline.py  test_publisher.py  test_quality_review.py  test_recommender.py  test_review_analytics.py  test_scanner.py  test_seo.py  test_series.py  test_summary.py  test_survey.py  test_tag_governance.py  test_tag_normalizer.py  test_tag_registry.py  test_tagger.py  test_telegram.py
